Minor update to list types when working with the identifiers in the resource class