@@ -103,7 +103,7 @@ public class TDRResource extends Resource {
         if (Objects.isNull(identifiers) || identifiers.isBlank()) {
           throw new BadRequestException("No dataset identifiers were provided");
         } else {
-          List<String> identifierList = Arrays.asList(identifiers.split(",").toString().trim());
+          List<String> identifierList = List.of(Arrays.toString(identifiers.split(",")).trim());
           List<Integer> datasetIds = tdrService.getDatasetIdsByIdentifier(identifierList);
         // Check that we were able to find a dataset id for all identifiers provided
         if (identifierList.size() != datasetIds.size()) {
